Address the review findings on #510
Bot review threads, all verified against the code before changing anything.

In code this branch introduced:

* ConnectEnabled leaked the Connect session when a suite sets
  reuseContextIfPossible. afterAll deliberately leaves the close to
  DataFrameSuiteBase.afterAll -- closing twice makes the client re-send
  ReleaseSession over a shut-down channel and retry for ~10 minutes -- but that
  call sits behind `if (!reuseContextIfPossible)`, so under reuse nothing closed
  it at all. Close it in exactly that branch. SampleConnectReuseContextTest
  covers it; the leak itself is not directly assertable, so what the test really
  guards is that the two close paths are never both taken (that would hang).

* assertDataFrameApproximateEqualsCollected accepted a customShow renderer and
  never called it, so Connect suites silently lost diagnostics the classic path
  gives them. It now builds the tagged mismatch DataFrame and calls customShow
  before failing, using Row.fromSeq rather than the classic path's
  GenericRowWithSchema (catalyst is not on the Connect client's classpath).

* ConnectSuiteBase left the child server JVM running if closing the session
  threw. Harness shutdown moved into its own finally.

* The "this really is a Connect-only classpath" test proved nothing. It probed
  org.apache.spark.sql.classic.SparkSession, which does not exist in Spark 3.5
  at all -- absent from spark-sql_2.13-3.5.6.jar as well as the client -- so it
  passed whether or not spark-sql had leaked in. Probe
  org.apache.spark.sql.execution.QueryExecution instead: present in spark-sql
  3.5, absent from the client.

* The --add-opens guard compared version strings, and "1.8" sorts after "1.17",
  so it was true for every Java version and the else branch was dead. Harmless
  on 11+ where the flag is valid; on Java 8, which Spark 3.5 supports, the child
  JVM died on an unrecognized option. Parse the major version instead. build.sbt
  had the identical